# xpbd-cuda

./: .gitignore  CMakeLists.txt  README.md  run_perf_test.sh  run_profiler.sh
include/: config.h  util.h
include/JGT-float/: aabox.h  ray.h  smits_mul.h
include/apbd/: Body.h  BodyReference.h  Collider.h  Collisions.h  Constraint.h  Model.h  Shape.h  nvec.h
include/collideBoxBox/: odeBoxBox.h
include/data/: soa.h
include/se3/: lib.h
output/profiling/: README.md  data_processing.py  times_1406f35_cpu_2x.1.csv  times_1406f35_cpu_2x.2.csv  times_1406f35_cpu_2x.aggregate.csv  times_1406f35_cuda_2x.1.csv  times_1406f35_cuda_2x.2.csv  times_1406f35_cuda_2x.aggregate.csv  times_1406f35_cuda_3x.1.csv  times_1406f35_cuda_3x.2.csv  times_1406f35_cuda_3x.aggregate.csv  times_2b53207_cuda_3x.1.csv  times_2b53207_cuda_3x.2.csv  times_2b53207_cuda_3x.aggregate.csv  times_4a037fc_cuda_3x.1.csv  times_4a037fc_cuda_3x.2.csv  times_4a037fc_cuda_3x.aggregate.csv  times_5e6881c_release_cuda_3x.1.csv  times_5e6881c_release_cuda_3x.2.csv  times_5e6881c_release_cuda_3x.3.csv  times_5e6881c_release_cuda_3x.aggregate.csv  times_b0cedbf_release_cuda_3x.1.csv  times_b0cedbf_release_cuda_3x.2.csv  times_b0cedbf_release_cuda_3x.3.csv  times_b0cedbf_release_cuda_3x.aggregate.csv
src/: CMakeLists.txt  util.cu
src/JGT-float/: aabox.cu  ray.cu  smits_mul.cu
src/apbd/: Body.cu  BodyReference.cu  Collider.cu  Constraint.cu  Model.cu  Shape.cu
src/collideBoxBox/: odeBoxBox.cu
src/data/: soa.cu
src/se3/: lib.cu
tests/: CMakeLists.txt  integration.cu  model_samples.h  performance.cu  sandbox.cu  visualize.blend  visualize.py
